--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "debounce": "^1.2.0",
     "element-ui": "^2.4.5",
     "eventemitter2": "^5.0.1",
     "vue": "^2.6.10",
